[project]
name = "bytego"
version = "0.1.0"
description = "A minimalist, binary asset manager with S3 support."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.0",
    "boto3>=1.34.0",
    "gunicorn>=21.2.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py", "index.html"]
